python/template/k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-app-svc
spec:
  selector:
    app: python-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 5000
